# game_handler

./: .gitignore  .gitsubmodules  1  4  Cargo.lockold  Cargo.toml  LICENSE  default  grid.rs  logs  printenv.sh  readme.md  settings.toml  todo.md  uwu
games/: 13sentinels.toml  celeste.toml  va11halla.toml
src/: catppuccin.rs  citra.rs  config.rs  date.rs  duckstation.rs  games.rs  grid_widget.rs  main.rs  mame.rs  native.rs  pcsx2.rs  process_subscription.rs  rpcs3.rs  ryujinx.rs  sort.rs  steam.rs  theme.rs  ui.rs  umu.rs  vita3k.rs  wine.rs  yuzu.rs
